--- a/FoodCollector/Base.lproj/Main.storyboard
+++ b/FoodCollector/Base.lproj/Main.storyboard
@@ -299,7 +299,7 @@
         <!--Date Picker-->
         <scene sceneID="0pI-PE-6Gi">
             <objects>
-                <viewController title="Date Picker" id="12l-Js-Ntn" sceneMemberID="viewController">
+                <viewController title="Date Picker" id="12l-Js-Ntn" customClass="FCPublishDateEditorVC" customModule="FoodCollector" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="x1f-Zm-Poy"/>
                         <viewControllerLayoutGuide type="bottom" id="Pxn-Kl-Uga"/>
@@ -307,8 +307,35 @@
                     <view key="view" contentMode="scaleToFill" id="peq-fn-fkD">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="Dj6-CB-3zi">
+                                <rect key="frame" x="0.0" y="103" width="600" height="162"/>
+                                <date key="date" timeIntervalSinceReferenceDate="440793059.67927003">
+                                    <!--2014-12-20 18:30:59 +0000-->
+                                </date>
+                            </datePicker>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LZ3-5C-cEv">
+                                <rect key="frame" x="270" y="316" width="61" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="61" id="gtU-bQ-Utv"/>
+                                </constraints>
+                                <state key="normal" title="Save">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="LZ3-5C-cEv" firstAttribute="top" secondItem="Dj6-CB-3zi" secondAttribute="bottom" constant="51" id="CVi-M4-cJA"/>
+                            <constraint firstItem="Dj6-CB-3zi" firstAttribute="top" secondItem="x1f-Zm-Poy" secondAttribute="bottom" constant="39" id="FbV-qU-PUx"/>
+                            <constraint firstAttribute="centerX" secondItem="Dj6-CB-3zi" secondAttribute="centerX" id="VZg-iP-sMJ"/>
+                            <constraint firstItem="Dj6-CB-3zi" firstAttribute="leading" secondItem="peq-fn-fkD" secondAttribute="leading" id="lDc-vG-qeK"/>
+                            <constraint firstAttribute="centerX" secondItem="LZ3-5C-cEv" secondAttribute="centerX" id="wlm-fT-cFz"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="datePicker" destination="Dj6-CB-3zi" id="eu9-LE-Vq4"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3ap-2t-w5R" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
